fixed extra margins for news item page

--- a/app/assets/stylesheets/large.css.scss
+++ b/app/assets/stylesheets/large.css.scss
@@ -124,6 +124,10 @@ $white_link: rgba(255,255,255, 0.75);
       padding-top: 160px;
       margin-top: -80px; 
     }
+    &#news-item {
+      margin-top: 0;
+      padding-top: 0;
+    }
     &.left {
       float: left;
     }
